kube/account/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: ACCOUNTS_URL
            - name: ACCOUNT_PORT
              value: '3000'
            - name: FRONT_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: FRONT_URL
            - name: MINIO_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: MINIO_ACCESS_KEY
            - name: MINIO_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MINIO_ENDPOINT
            - name: MINIO_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: MINIO_SECRET_KEY
            - name: MODEL_ENABLED
              value: '*'
            - name: DB_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MONGO_URL
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: SERVER_SECRET
            - name: TRANSACTOR_URL
              value: ws://transactor:3333;ws://localhost:3333
            - name: ENDPOINT_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: TRANSACTOR_URL
          image: getyoutrack/account:latest
          name: account
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512M"
      restartPolicy: Always
