kube/account/account-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: account
  name: account
spec:
  ingressClassName: nginx
  rules:
    - host: account.glint.example
      http:
        paths:
          - backend:
              service:
                name: account
                port:
                  number: 80
            path: /
            pathType: Prefix
